--- a/_i18n/en/_posts/2020-02-18-如何運用設計思考進行政府數位服務的設計？.md
+++ b/_i18n/en/_posts/2020-02-18-如何運用設計思考進行政府數位服務的設計？.md
@@ -2,7 +2,7 @@
   layout: "project"
   title: "How to use design thinking to design government digital services?"
   excerpt: "When design thinking encounters the redesign of digital services in the public sector, plus the collaboration and participation of the people, what kind of sparks will there be? This article introduces the design process of the “One-stop Integrated Mountaineering Service Network in Taiwan” assisted by PDIS last year, so that everyone can better understand what role design plays in an open government."
-  image: "https://hackmd.pdis.rocks/uploads/upload_dd9229046146bee7920ecf4e973c76fd.jpeg"
+  image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/a/aecd8296f25d3a3060c40f22074a735b1abb523c.jpeg
   author: "張皓婷"
   category: "blog"
   project: "登山申請一站式服務網"
@@ -18,160 +18,153 @@
     - "協作會議"
 ---
 
+## Foreword 
 
-| <style>
-figure {
-  max-width: 768px;
-}
-</style> 
+<figure> 
+<img width="768" src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/c/c64fb3a045ed6428c29151a1ef04c9ef158172e7.jpeg">
+</figure> 
 
- ## Foreword 
+After passing through the bamboo forest, which is rich in water and higher than humans, the rugged sharp ridges unfold in front. The uninhabited alpine grasslands and continuous peaks are pure land with many primitive ecology, and also the exploration of the foot of many mountain enthusiasts. 
 
- <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_dd9229046146bee7920ecf4e973c76fd.jpeg"> 
- </figure> 
+This is a mountain scene that covers 70% of Taiwan&#39;s total land area. On this small island in Taiwan, there are more than 200 high mountains over 3,000 meters. Most of them need to apply for approval before they can enter the mountain. However, application services are scattered in pages designed independently by each administration, regardless of user experience or rules. Experienced mountaineering users often need to compare the private mountaineering information network and netizens&#39; routes beforehand, and then open the application page one by one. Behind these skilful moves, the complexity of the mountaineering management mechanism is highlighted. For ordinary people who want to get close to the mountain forest, these application processes are even more difficult! 
 
- After passing through the bamboo forest, which is rich in water and higher than humans, the rugged sharp ridges unfold in front. The uninhabited alpine grasslands and continuous peaks are pure land with many primitive ecology, and also the exploration of the foot of many mountain enthusiasts. 
+In early August, the Ministry of the Interior proposed at the Open Government Liaisons Monthly Meeting that the case be brought to the Executive Digital&#39;s Public Digital Innovation Space (PDIS) for collaboration. Since then, PDIS and various ministries have conducted a redesign of the &quot;Taiwan Mountaineering One-stop Integrated Service Network&quot; based on design thinking for a period of about four months. 
 
- This is a mountain scene that covers 70% of Taiwan&#39;s total land area. On this small island in Taiwan, there are more than 200 high mountains over 3,000 meters. Most of them need to apply for approval before they can enter the mountain. However, application services are scattered in pages designed independently by each administration, regardless of user experience or rules. Experienced mountaineering users often need to compare the private mountaineering information network and netizens&#39; routes beforehand, and then open the application page one by one. Behind these skilful moves, the complexity of the mountaineering management mechanism is highlighted. For ordinary people who want to get close to the mountain forest, these application processes are even more difficult! 
 
- In early August, the Ministry of the Interior proposed at the Open Government Liaisons Monthly Meeting that the case be brought to the Executive Digital&#39;s Public Digital Innovation Space (PDIS) for collaboration. Since then, PDIS and various ministries have conducted a redesign of the &quot;Taiwan Mountaineering One-stop Integrated Service Network&quot; based on design thinking for a period of about four months. 
+## Challenge 
 
+After the monthly meeting, PDIS and the various ministries will take stock of the current situation to clarify existing challenges and design practices to promote the entire project. We take stock of the three biggest challenges in this project. 
 
- ## Challenge 
+1. The short-term one-stop solution is to provide an entrance link, causing a rebound. 
+2. The interface, rules, and user experience are inconsistent. 
+3. The existing services are government-oriented and lack user-oriented thinking 
 
- After the monthly meeting, PDIS and the various ministries will take stock of the current situation to clarify existing challenges and design practices to promote the entire project. We take stock of the three biggest challenges in this project. 
 
- 1. The short-term one-stop solution is to provide an entrance link, causing a rebound. 
- 2. The interface, rules, and user experience are inconsistent. 
- 3. The existing services are government-oriented and lack user-oriented thinking 
+#### 1. 2019/6/30 The Architectural Services Department tried to unify the entrance, but it actually only provided multiple entrances Link, causing the public to rebound. 
 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/9/96c9d9b9e537bbb94582cb44689bd6b8789bfdd7.jpeg">
+<figcaption class="hike-img-note"> Below this picture are the diagrams of the application entrances. After clicking, the web page will lead the user to their respective pages to apply. There is no unified entrance, which will cause Shanyou to rebound. </figcaption> 
+</figure> 
 
- #### 1. 2019/6/30 The Architectural Services Department tried to unify the entrance, but it actually only provided multiple entrances Link, causing the public to rebound. 
 
-| <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_0428c9751f5775136f1b435d4fb074bb.jpeg"> 
- <figcaption class="hike-img-note"> Below this picture are the diagrams of the application entrances. After clicking, the web page will lead the user to their respective pages to apply. There is no unified entrance, which will cause Shanyou to rebound. </figcaption> 
- </figure> 
+#### 2. Existing interface belongs to various ministries. Except for different rules, entrance and user experience are different, which is confusing 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/38a258669abfd9ce667e0b72d3441267308f3963.jpeg">
+<figcaption class="hike-img-note"> Mountaineering applications have been around for many years, and each ministry will make its own rules and design entrances, resulting in inconsistent interfaces and specifications, and applicants are often confused. </figcaption> 
+</figure> 
 
+#### 3. The existing services are government-oriented and lack user-oriented thinking 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/f/f180d2939d2661b837387b585da1f91df5c69158.jpeg">
+<figcaption class="hike-img-note"> The specifications highlighted in the figure with various colors, font sizes, and different colors of background colors again show that the ministry will not consider &quot;user experience&quot; as the guide when designing this service, but use &quot;government standards&quot; as the guide. Thinking </figcaption> 
+</figure> 
 
- #### 2. Existing interface belongs to various ministries. Except for different rules, entrance and user experience are different, which is confusing 
- <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_2771e86a40830a8c88cd6885cc8bf5f8.jpeg"> 
- <figcaption class="hike-img-note"> Mountaineering applications have been around for many years, and each ministry will make its own rules and design entrances, resulting in inconsistent interfaces and specifications, and applicants are often confused. </figcaption> 
- </figure> 
+## The first step to the challenge 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/88232f207584ffec81979a38770eadeae1582870.gif">
+<figcaption class="hike-img-note"> At the beginning of the project, there were many challenges and difficulties, and it was always a mess. Using the double diamond design to think about divergence and convergence, we can put together a more systematic process. </figcaption> 
+</figure> 
 
- #### 3. The existing services are government-oriented and lack user-oriented thinking 
- <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_ccc8d32e4c2592409c5f8cfa7e6e896a.jpeg"> 
- <figcaption class="hike-img-note"> The specifications highlighted in the figure with various colors, font sizes, and different colors of background colors again show that the ministry will not consider &quot;user experience&quot; as the guide when designing this service, but use &quot;government standards&quot; as the guide. Thinking </figcaption> 
- </figure> 
+After understanding the overall challenge, we have cited Double Diamond in design thinking as the flow of our project. Of course, user interviews commonly used in design thinking, defining core issues, and user testing are all There is progress. And this time we quoted the spirit of collaboration in open government and arranged two workshops and a digital dialogue. The following will briefly introduce these three important links. 
 
- ## The first step to the challenge 
- <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_cd7f02b4125f2c3b363bc60db7cc7b0f.gif"> 
- <figcaption class="hike-img-note"> At the beginning of the project, there were many challenges and difficulties, and it was always a mess. Using the double diamond design to think about divergence and convergence, we can put together a more systematic process. </figcaption> 
- </figure> 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/9/91621552e253a83ef26b3d6652cb400851c6e9a5.jpeg">
+<figcaption class="hike-img-note"> In addition to the methods described above, we used a collaborative approach to arrange two workshops and a digital dialogue to collect opinions and jointly design government services with relevant stakeholders. </figcaption> 
+</figure> 
 
- After understanding the overall challenge, we have cited Double Diamond in design thinking as the flow of our project. Of course, user interviews commonly used in design thinking, defining core issues, and user testing are all There is progress. And this time we quoted the spirit of collaboration in open government and arranged two workshops and a digital dialogue. The following will briefly introduce these three important links. 
 
-| <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_6ea6afd08c5895fccf992e05d400f2a7.jpeg"> 
- <figcaption class="hike-img-note"> In addition to the methods described above, we used a collaborative approach to arrange two workshops and a digital dialogue to collect opinions and jointly design government services with relevant stakeholders. </figcaption> 
- </figure> 
+#### 1. 2019/9/6 Collaboration Meeting 
+At the beginning of the project, we invited all stakeholders related to mountaineering to participate in a collaboration meeting. This is the first time that everyone has discussed this issue face to face, and there is still a long way to go in the future, so everyone&#39;s first impression is very important. Therefore, in the meeting, in addition to helping everyone unify the issues, PDIS also designed group discussions to allow everyone to exchange their experiences, difficulties or ideas. 
 
+The so-called three-point meeting, in the group discussion, sharing of experience can build mutual trust and empathy. In addition, PDIS often hears a solution proposed by one party in the discussion, and some people may raise difficulties or challenges in implementation. However, the diverse composition encourages everyone to think in another way. Often, they can come up with solutions to the difficulties and help in the discussion. Promote ideas that weren&#39;t feasible, or find eclectic alternatives that everyone can accept or implement. 
 
-| #### 1. 2019/9/6 Collaboration Meeting 
- At the beginning of the project, we invited all stakeholders related to mountaineering to participate in a collaboration meeting. This is the first time that everyone has discussed this issue face to face, and there is still a long way to go in the future, so everyone&#39;s first impression is very important. Therefore, in the meeting, in addition to helping everyone unify the issues, PDIS also designed group discussions to allow everyone to exchange their experiences, difficulties or ideas. 
+<figure> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/7/7dae7a304448485d4cafd9ba445887a2fcdcdfb6.jpeg">
+<figcaption class="hike-img-note"> On the day of the collaboration meeting, we invited interested parties to participate in the discussion (the picture shows the representative of the Forestry Bureau, the representative of the national park, the search and rescue personnel, the mountain friend, the mountain guide, the mountain tourism practitioners and the open government contact person), and the PDIS Collaborate on the core issues of the design to find the corresponding solution. </figcaption> 
+</figure> 
 
- The so-called three-point meeting, in the group discussion, sharing of experience can build mutual trust and empathy. In addition, PDIS often hears a solution proposed by one party in the discussion, and some people may raise difficulties or challenges in implementation. However, the diverse composition encourages everyone to think in another way. Often, they can come up with solutions to the difficulties and help in the discussion. Promote ideas that weren&#39;t feasible, or find eclectic alternatives that everyone can accept or implement. 
+#### 2. 2019/9 / 2-9 / 30 Polis Digital Dialogue 
+At the same time, we have used a digital tool Polis, hoping to collect people who care about this issue in a short time opinion. The advantage of Polis is that it can collect people&#39;s opinions widely at low cost, without space or number of people. More importantly, there is a consent and disagree function on the interface. In addition to expressing their views, everyone can agree or disagree with the views put forward by others. 
 
-| <figure> 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_5a13a0a5ef794dbac6194847c54a2230.jpeg"> 
- <figcaption class="hike-img-note"> On the day of the collaboration meeting, we invited interested parties to participate in the discussion (the picture shows the representative of the Forestry Bureau, the representative of the national park, the search and rescue personnel, the mountain friend, the mountain guide, the mountain tourism practitioners and the open government contact person), and the PDIS Collaborate on the core issues of the design to find the corresponding solution. </figcaption> 
- </figure> 
+Therefore, we used the public speaking platform of the National Development Council to conduct a one-month Polis digital dialogue. A total of 813 people participated in the vote, cast 12,393 votes, and collected 121 views on digital platform transformation. Such results can not only collect opinions widely, but also carry out classified calculations based on whether or not the users agree, so that colleagues in the public sector can more accurately grasp public opinion, and at the same time do not miss any ideas and opinions. 
 
- #### 2. 2019/9 / 2-9 / 30 Polis Digital Dialogue 
- At the same time, we have used a digital tool Polis, hoping to collect people who care about this issue in a short time opinion. The advantage of Polis is that it can collect people&#39;s opinions widely at low cost, without space or number of people. More importantly, there is a consent and disagree function on the interface. In addition to expressing their views, everyone can agree or disagree with the views put forward by others. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/6/694c60d0bff1a946225fcc30a93fb0e6b51746ef.jpeg">
 
- Therefore, we used the public speaking platform of the National Development Council to conduct a one-month Polis digital dialogue. A total of 813 people participated in the vote, cast 12,393 votes, and collected 121 views on digital platform transformation. Such results can not only collect opinions widely, but also carry out classified calculations based on whether or not the users agree, so that colleagues in the public sector can more accurately grasp public opinion, and at the same time do not miss any ideas and opinions. 
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_c42642aa1fd6023528c5665e1e1247ec.jpeg"> 
+#### 3. 2019/10/31 Testing the climbing forum before going live 
 
+In order to expect the beta test version to be launched on 11/1, we have arranged a climbing forum on 10/31 In addition to hoping to find stakeholders to share the project progress and challenges, this forum is very important to look forward to management. I hope these participants can understand that the version to be launched tomorrow is a beta version and work together to make this digital service better. Soon after the forum ended, we actually saw many participants sharing in their community, actively promoting the launch of tomorrow ’s test, and encouraging everyone to provide more suggestions. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/e/e4e3dbe0e195af5cef6a1424feb290c4ad08be4c.jpeg">
 
- #### 3. 2019/10/31 Testing the climbing forum before going live 
 
- In order to expect the beta test version to be launched on 11/1, we have arranged a climbing forum on 10/31 In addition to hoping to find stakeholders to share the project progress and challenges, this forum is very important to look forward to management. I hope these participants can understand that the version to be launched tomorrow is a beta version and work together to make this digital service better. Soon after the forum ended, we actually saw many participants sharing in their community, actively promoting the launch of tomorrow ’s test, and encouraging everyone to provide more suggestions. 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_0c59fc4c6ef6a2c8bc72b1f6faf7076e.jpg"> 
+##### Design core of the execution surface 
 
+###### &quot;Design-test&quot; instead of the previous &quot;online = completed&quot; 
 
-| ##### Design core of the execution surface 
+In addition to the method just mentioned In addition, we also used prototyping in design thinking in our implementation. 
 
- ###### &quot;Design-test&quot; instead of the previous &quot;online = completed&quot; 
+In the digital services provided by many governments, the thinking of “going online = done” is still there. However, digital services and user experience are a process of continuous updating and iteration. Therefore, we hope to replace the previous &quot;online = completion&quot; thinking with a repetitive iteration of &quot;design-test&quot; in this project. (Launch = complete mindset to Build-test-repeat phiolosophy) For this reason, we listed this practice as a prerequisite in the process of finding a manufacturer. In the later implementation process, manufacturers cooperated with testing and public feedback to release a new version in two to three days to two or three weeks. 
 
- In addition to the method just mentioned In addition, we also used prototyping in design thinking in our implementation. 
 
- In the digital services provided by many governments, the thinking of “going online = done” is still there. However, digital services and user experience are a process of continuous updating and iteration. Therefore, we hope to replace the previous &quot;online = completion&quot; thinking with a repetitive iteration of &quot;design-test&quot; in this project. (Launch = complete mindset to Build-test-repeat phiolosophy) For this reason, we listed this practice as a prerequisite in the process of finding a manufacturer. In the later implementation process, manufacturers cooperated with testing and public feedback to release a new version in two to three days to two or three weeks. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/1/189732cf3afb08e02cf47ed7a14d96b70e942c76.gif">
 
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_0eb996d50d5a3f7fad4267ba60a43ca7.gif"> 
+##### OpenAPI opens another possibility for design thinking 
 
+Another implementation requirement is the Open API Specification 
 
- ##### OpenAPI opens another possibility for design thinking 
+For non-information people, the term may be strange. Explained by my (designer) understanding, the Open API is like a language for communication between software and software, which unifies this communication language. In the future, when folks want to use this government service to design their own software, they can follow these Specification to open the possibility of this service. These applications may be useful in familiar navigation, search and rescue. It can also extend the functionality of this digital service in our unknown domain. 
 
- Another implementation requirement is the Open API Specification 
+Compared with the design of the double rhombus, we introduced the Open API to open the tail of the double rhombus, so that a government service that was originally purely functional could become a carrier of various private digital services. The original &quot;Deliver&quot; in the last stage became &quot;Unlock&quot;. Let the digital services provided by this government continue to expand the scope of its services. 
 
- For non-information people, the term may be strange. Explained by my (designer) understanding, the Open API is like a language for communication between software and software, which unifies this communication language. In the future, when folks want to use this government service to design their own software, they can follow these Specification to open the possibility of this service. These applications may be useful in familiar navigation, search and rescue. It can also extend the functionality of this digital service in our unknown domain. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/c/c4b362d3c9082d944915e538a0a5764b7d63fab6.gif">
 
- Compared with the design of the double rhombus, we introduced the Open API to open the tail of the double rhombus, so that a government service that was originally purely functional could become a carrier of various private digital services. The original &quot;Deliver&quot; in the last stage became &quot;Unlock&quot;. Let the digital services provided by this government continue to expand the scope of its services. 
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_f7314fc89f9247015ec51264d198f2df.gif"> 
 
+## Other design methods in the project 
 
+#### Ray 3.0 design introduction 
+We also made many different attempts in this project. In the summer of 2019, we We invited young people who are very interested in public affairs to select different digital services in the government for user research and redesign. (We call it Rescue Action by Youth.) Many of them are studying design-related departments, or college students or graduate students who are very interested in user experience and service design. One group of students chose the entry system to study in July. 
 
- ## Other design methods in the project 
+After learning that the mountaineering system was about to be redesigned through design methods in early September, we invited them to join us with the research results of the user for a month. In the process of user testing in these months, thanks to this group of future designers who have conducted an in-depth investigation of this service for a month, we have received a lot of excitement and assistance. 
 
-| #### Ray 3.0 design introduction 
- We also made many different attempts in this project. In the summer of 2019, we We invited young people who are very interested in public affairs to select different digital services in the government for user research and redesign. (We call it Rescue Action by Youth.) Many of them are studying design-related departments, or college students or graduate students who are very interested in user experience and service design. One group of students chose the entry system to study in July. 
 
- After learning that the mountaineering system was about to be redesigned through design methods in early September, we invited them to join us with the research results of the user for a month. In the process of user testing in these months, thanks to this group of future designers who have conducted an in-depth investigation of this service for a month, we have received a lot of excitement and assistance. 
+#### User interviews and tests conducted by the public sector 
 
+My colleagues in the Construction Department and the Forest Service who are not familiar with design thinking and collaboration have also spent a lot in this project. Time for user interviews and tests. The skills of writing interviews and interviews are also becoming more and more proficient in interviews. 
 
- #### User interviews and tests conducted by the public sector 
+PDIS has led the public sector to open government projects for many times. In addition to assisting everyone, I also wrote a short walk to interview and interview. I look forward to providing it to my colleagues in the public sector who work with us every time. I also welcome folks to share references and even give feedback, so that user experience and design thinking can continue to affect everyone in every corner of society. 
 
-| My colleagues in the Construction Department and the Forest Service who are not familiar with design thinking and collaboration have also spent a lot in this project. Time for user interviews and tests. The skills of writing interviews and interviews are also becoming more and more proficient in interviews. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/4c7117ec00dfdc2a9457be0428707bfeff98494c.jpeg">
 
- PDIS has led the public sector to open government projects for many times. In addition to assisting everyone, I also wrote a short walk to interview and interview. I look forward to providing it to my colleagues in the public sector who work with us every time. I also welcome folks to share references and even give feedback, so that user experience and design thinking can continue to affect everyone in every corner of society. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/e/edf93f73bb5f065b4401dadc384cc78a7b90162c.jpeg">
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_1d178d14b1ce1b87c7270f0cd4f5f992.jpg"> 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/f/fc738d36294964761910e08eb1afce9a6ae775d0.jpeg">
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_c68bd183b42d26c42bd94e5bea45eb98.JPG"> 
 
-| <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_4b2ecd0cbee32f18e1baba3997bcd842.JPG"> 
 
 
+## What do you say 
 
+We observed the comments of mountain friends on the Internet who care about this system and found some subtle changes. 
 
-| ## What do you say 
 
- We observed the comments of mountain friends on the Internet who care about this system and found some subtle changes. 
+From the scolding of the original system by everyone on 6/30 to the test of the integration service, we saw that netizens shifted their attention from scolding to suggestions. Everyone likes to say that netizens are sour people, but we found that as long as there is a channel willing to listen to suggestions, everyone&#39;s opinions will become more constructive. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/ddcaf2ea43c0bfa705732a8488755c19e2199525.jpeg">
 
 
- From the scolding of the original system by everyone on 6/30 to the test of the integration service, we saw that netizens shifted their attention from scolding to suggestions. Everyone likes to say that netizens are sour people, but we found that as long as there is a channel willing to listen to suggestions, everyone&#39;s opinions will become more constructive. 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_ad7205bcbe65679593236e9524fbf2d5.jpg"> 
+In addition, we also saw some participating people who took the initiative to share their own experience in participating in design and construction. In addition to helping the digital service to explain some of the restrictions that have just been launched, they are also very proud to share and participate. process. Discuss and participate in the design together, so that the original service user has also become a co-creator. This hope for a better sense of responsibility for this service has also sprouted in the hearts of the participants. 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/e/ee41bbb8091286106327c5b507ba8147312f359d.jpeg">
 
 
- In addition, we also saw some participating people who took the initiative to share their own experience in participating in design and construction. In addition to helping the digital service to explain some of the restrictions that have just been launched, they are also very proud to share and participate. process. Discuss and participate in the design together, so that the original service user has also become a co-creator. This hope for a better sense of responsibility for this service has also sprouted in the hearts of the participants. 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_5ef95ee6807275ef5f2fc4dbcd8b04f4.jpg"> 
+A message from a mountain friend: &quot;This site is still a long way off from what we imagined, but I still feel relieved and at least started to go.&quot; In fact, the process of this project is like mountain climbing. Difficult, needs the help of teammates, and everyone&#39;s efforts, at least we started to move forward, the results and beauty are ahead, let us work together! 
+<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/03ff6e3d20ab08e80158eba0888d91f72bfa50c7.jpeg">
 
 
- A message from a mountain friend: &quot;This site is still a long way off from what we imagined, but I still feel relieved and at least started to go.&quot; In fact, the process of this project is like mountain climbing. Difficult, needs the help of teammates, and everyone&#39;s efforts, at least we started to move forward, the results and beauty are ahead, let us work together! 
- <img style="max-width: 768px;" src="https://hackmd.pdis.rocks/uploads/upload_523e77966cf66fdb5f4dd299f27d7ade.jpg"> 
 
+## Project follow-up 
 
-
- ## Project follow-up 
-
- The four-month project continued to improve after the 11/1 Beta test went live. 
- PDIS is also returned to the Construction Department for construction after the aging of the temporary project, and new versions of improvements and optimizations are currently being released. We also welcome friends who are interested in the one-stop service network for Taiwan mountaineering applications, to provide suggestions and feedback at any time. 
- https: //hike.taiwan.gov.tw/
+The four-month project continued to improve after the 11/1 Beta test went live. 
+PDIS is also returned to the Construction Department for construction after the aging of the temporary project, and new versions of improvements and optimizations are currently being released. We also welcome friends who are interested in the one-stop service network for Taiwan mountaineering applications, to provide suggestions and feedback at any time. 
+https: //hike.taiwan.gov.tw/
