--- a/_i18n/en/_posts/2020-02-18-我們如何為登山申請打造一站式服務系統.md
+++ b/_i18n/en/_posts/2020-02-18-我們如何為登山申請打造一站式服務系統.md
@@ -15,172 +15,165 @@
     - "公私協力"
 ---
 
+## Origin 
 
-| <style>
-figure {
-  max-width: 768px;
-}
-</style> 
+Since June 2019, under the leadership of President Su Zhenchang, the Executive Yuan has launched the &quot;open mountain forest&quot; policy, and the Construction Department has also launched &quot;Taiwan Mountaineering Application Integration Information&quot; on June 30 &quot;Net&quot;, as the beginning of the forest policy, aims to make it easier for people to apply for entry to the mountains. 
 
- ## 缘起 
+After integrating the information online, many suggestions flooded into the website. As a rare cross-ministerial information integration website in recent years, integrating the information network is the first step. The opinions of the people let colleagues in various ministries understand the possible directions for improvement. 
 
-| Since June 2019, under the leadership of President Su Zhenchang, the Executive Yuan has launched the &quot;open mountain forest&quot; policy, and the Construction Department has also launched &quot;Taiwan Mountaineering Application Integration Information&quot; on June 30 &quot;Net&quot;, as the beginning of the forest policy, aims to make it easier for people to apply for entry to the mountains. 
+Therefore, Wang Junkai, the open government contact person of the Ministry of the Interior (hereinafter referred to as &quot;PO&quot;), proposed this case in the &quot;Open Government Contact Person Work Promotion Conference&quot; (&quot;PO monthly meeting&quot;) in August to collaborate with PDIS to transform User experience for the online climbing application process. Under the authorization of Dean Su, PDIS cuts through the technical aspects of system integration and assists in the incurability of inter-ministerial system-to-system interface. 
 
- After integrating the information online, many suggestions flooded into the website. As a rare cross-ministerial information integration website in recent years, integrating the information network is the first step. The opinions of the people let colleagues in various ministries understand the possible directions for improvement. 
+After more than a month of planning and discussion, we held a collaborative meeting on September 6 to work together with Shanyou to design and plan a new online application process in the form of a workshop. The final result is the current Taiwan Mountaineering Application Integration Information Network. 
 
- Therefore, Wang Junkai, the open government contact person of the Ministry of the Interior (hereinafter referred to as &quot;PO&quot;), proposed this case in the &quot;Open Government Contact Person Work Promotion Conference&quot; (&quot;PO monthly meeting&quot;) in August to collaborate with PDIS to transform User experience for the online climbing application process. Under the authorization of Dean Su, PDIS cuts through the technical aspects of system integration and assists in the incurability of inter-ministerial system-to-system interface. 
+## Focus on the user and find the pain points 
 
- After more than a month of planning and discussion, we held a collaborative meeting on September 6 to work together with Shanyou to design and plan a new online application process in the form of a workshop. The final result is the current Taiwan Mountaineering Application Integration Information Network. 
+<figure><img alt="Existing application process" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/6/639100831491b86eeb2ef0db5ba783d027e0f39f_2_991x558.jpeg"><figcaption> Figure 1. Existing application process. </figcaption></figure> 
 
- ## Focus on the user and find the pain points 
 
- <figure><img alt="Existing application process" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/6/639100831491b86eeb2ef0db5ba783d027e0f39f_2_991x558.jpeg"><figcaption> Figure 1. Existing application process. </figcaption></figure> 
+Under the existing application process, the public needs to take more care to identify the management unit involved in the route they are walking and apply separately. For those who want to get close to the forest, but are relatively inexperienced, it is a bit of a headache. 
 
+Government Digital Service Guidelines (Note 1), the first &quot;** Understanding user needs **&quot;. 
 
- Under the existing application process, the public needs to take more care to identify the management unit involved in the route they are walking and apply separately. For those who want to get close to the forest, but are relatively inexperienced, it is a bit of a headache. 
+***Define who is the user of the service (including the digitally disadvantaged). Through continuous user research, design services that meet user needs. *** 
+***In order to design (digital) services that meet users &#39;real needs and make them happy to use, users (including multiple stakeholders) must be defined, and services must be integrated into users&#39; lives and Need rather than just the services that users or providers want, consider the digitally vulnerable channels that need help, and continue to explore demand for sophisticated services with users. *** 
 
- Government Digital Service Guidelines (Note 1), the first &quot;** Understanding user needs **&quot;. 
+In this case, we collected the opinions of the people through a variety of ways, and looked for pain points from the perspective of users. 
 
- *** Define who is the user of the service (including the digitally disadvantaged). Through continuous user research, design services that meet user needs. *** 
- *** In order to design (digital) services that meet users &#39;real needs and make them happy to use, users (including multiple stakeholders) must be defined, and services must be integrated into users&#39; lives and Need rather than just the services that users or providers want, consider the digitally vulnerable channels that need help, and continue to explore demand for sophisticated services with users. *** 
 
- In this case, we collected the opinions of the people through a variety of ways, and looked for pain points from the perspective of users. 
 
+### College student interactive service designers participate together 
 
+Since 2017, PDIS has been cooperating with the Youth Department Public Development Department&#39;s &quot;Public College Student Department Trainee Program&quot; to implement &quot; Young Students Medical Examination Government Website Plan (referred to as RAY). &quot; Youth are invited to participate in public affairs by improving government digital services. Beginning in 2019, it is different from the large-scale medical examinations for the compatibility of government websites in the previous two years. Instead, we invite college students who specialize in human-computer interaction and service design to carry out in-depth design and transformation of digital service processes for government websites. 
 
- ### College student interactive service designers participate together 
+One group of RAY trainees chose to improve the online climbing application process as the trainee content. After simple interviews and surveys, they described Persona of the mountain friends, defined the appearance of the target users of the system, and set key tasks to find subjects who met the appearance. Interview. 
 
- Since 2017, PDIS has been cooperating with the Youth Department Public Development Department&#39;s &quot;Public College Student Department Trainee Program&quot; to implement &quot; Young Students Medical Examination Government Website Plan (referred to as RAY). &quot; Youth are invited to participate in public affairs by improving government digital services. Beginning in 2019, it is different from the large-scale medical examinations for the compatibility of government websites in the previous two years. Instead, we invite college students who specialize in human-computer interaction and service design to carry out in-depth design and transformation of digital service processes for government websites. 
+The students then summarized the opinions collected in the interview and incorporated them into the prototype design. [Use Low-Fidelity Prototype (Wireframe)](https://en.wikipedia.org/wiki/website_wireframe) invites interviewees to test the newly designed interface and evaluate its benefits by using service process design methods. after many iterations, the students of the ray project eventually produced [mockup of the system interface](https://en.wikipedia.org/wiki/mockup), as a reference for the subsequent system development. 
 
- One group of RAY trainees chose to improve the online climbing application process as the trainee content. After simple interviews and surveys, they described Persona of the mountain friends, defined the appearance of the target users of the system, and set key tasks to find subjects who met the appearance. Interview. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/8/88dfc925a04f11d60c705fb4b5454df314b8b46b_2_991x565.png"><figcaption> Figure 2. System prototype produced by the RAY project. The picture is the homepage, <a href="https://xd.adobe.com/view/d99a87d9-9e9d-45bb-6bc7-e72798977083-afab/?fullscreen" target="_blank">click here</a> There is a Demo webpage that can interact online </figcaption></figure> 
 
- The students then summarized the opinions collected in the interview and incorporated them into the prototype design. [Use Low-Fidelity Prototype (Wireframe)](https://en.wikipedia.org/wiki/website_wireframe) invites interviewees to test the newly designed interface and evaluate its benefits by using service process design methods. after many iterations, the students of the ray project eventually produced [mockup of the system interface](https://en.wikipedia.org/wiki/mockup), as a reference for the subsequent system development. 
+## The challenge of integrating information systems across departments 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/8/88dfc925a04f11d60c705fb4b5454df314b8b46b_2_991x565.png"><figcaption> Figure 2. System prototype produced by the RAY project. The picture is the homepage, <a href="https://xd.adobe.com/view/d99a87d9-9e9d-45bb-6bc7-e72798977083-afab/?fullscreen" target="_blank">click here</a> There is a Demo webpage that can interact online </figcaption></figure> 
+When creating a one-stop mountaineering application service, the immediate challenge was that entering the forest under the current regulations may involve the jurisdiction of many business units And brought many sub-topics. 
 
- ## The challenge of integrating information systems across departments 
+The most obvious challenge is to create a new process interface after integrating the application processes in almost nothing. Fortunately, in this part, we already have Mockups made by trainees of RAY. Based on this, we incorporated the opinions collected in the collaborative meeting and fine-tuned them, and we have a pretty good interface design draft. 
 
-| When creating a one-stop mountaineering application service, the immediate challenge was that entering the forest under the current regulations may involve the jurisdiction of many business units And brought many sub-topics. 
 
- The most obvious challenge is to create a new process interface after integrating the application processes in almost nothing. Fortunately, in this part, we already have Mockups made by trainees of RAY. Based on this, we incorporated the opinions collected in the collaborative meeting and fine-tuned them, and we have a pretty good interface design draft. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/2/23f9335c6f4746f0468eeb707164f772cacde086_2_615x750.jpeg"><figcaption> Figure 3. Prototype of the adjusted system interface </figcaption></figure> 
 
+A friend with experience in product system analysis must know that the integration and optimization of the process interface is only the first step in the integration of multiple systems. The most difficult thing is to integrate the system operation logic that is hidden behind the operation interface, but is not easy for users to discover. 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/2/23f9335c6f4746f0468eeb707164f772cacde086_2_615x750.jpeg"><figcaption> Figure 3. Prototype of the adjusted system interface </figcaption></figure> 
+In response to environmental protection and sustainable development, some mountains and forests in Taiwan have been designated as national parks or nature reserves. People must apply to the National Park Office or Forestry Bureau before entering to facilitate environmental load control. Further sustainable development. 
 
- A friend with experience in product system analysis must know that the integration and optimization of the process interface is only the first step in the integration of multiple systems. The most difficult thing is to integrate the system operation logic that is hidden behind the operation interface, but is not easy for users to discover. 
+At the same time, Taiwan&#39;s mountainous areas were listed as controlled areas. According to Article 5 of the National Security Law, applications should be made to the authorities before entering the mountainous area. Although the banned area is being lifted gradually, the public must apply to the police station (the current executive authority of the mountain forest control area) to enter the mountainous area before entering the unbanned area. 
 
- In response to environmental protection and sustainable development, some mountains and forests in Taiwan have been designated as national parks or nature reserves. People must apply to the National Park Office or Forestry Bureau before entering to facilitate environmental load control. Further sustainable development. 
+The complexity of integration is greatly increased when there may be more than one and not exactly the same administrative authority in each location. 
 
- At the same time, Taiwan&#39;s mountainous areas were listed as controlled areas. According to Article 5 of the National Security Law, applications should be made to the authorities before entering the mountainous area. Although the banned area is being lifted gradually, the public must apply to the police station (the current executive authority of the mountain forest control area) to enter the mountainous area before entering the unbanned area. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/7/7c7bfcd6ca6d84aa154de35db7540000a208c573_2_991x693.jpeg"><figcaption> Figure 4. PDIS self-examined the regular mental map during the project. The rules in the picture are not necessarily the actual rules on the line, but the rules of the present moment. </figcaption></figure> 
 
- The complexity of integration is greatly increased when there may be more than one and not exactly the same administrative authority in each location. 
+You can see from the above figure that there are differences in the number of application days, the number of members (membership types), and even the way of drawing. 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/7/7c7bfcd6ca6d84aa154de35db7540000a208c573_2_991x693.jpeg"><figcaption> Figure 4. PDIS self-examined the regular mental map during the project. The rules in the picture are not necessarily the actual rules on the line, but the rules of the present moment. </figcaption></figure> 
+The differences between these rules include the considerations of the administrative operation process of each management unit. As far as the system design is concerned, it is certainly better to unify these rules as much as possible. However, under the consideration of time pressure, there is not enough time for various administrative departments to sit down and unify the rules. Therefore, being able to handle complex application rules has become one of the major considerations of the system design. 
 
- You can see from the above figure that there are differences in the number of application days, the number of members (membership types), and even the way of drawing. 
+## So how do we integrate? 
 
- The differences between these rules include the considerations of the administrative operation process of each management unit. As far as the system design is concerned, it is certainly better to unify these rules as much as possible. However, under the consideration of time pressure, there is not enough time for various administrative departments to sit down and unify the rules. Therefore, being able to handle complex application rules has become one of the major considerations of the system design. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/43da67ffe01266585740d588f330ab41a29f6645.png"><figcaption> Figure 5. Mind map for system design considerations. </figcaption></figure> 
 
- ## So how do we integrate? 
+Finally, after a comprehensive system inventory, a huge tree diagram like the one above is generated. There are many things to be solved, but resources and time are limited. Therefore, the first task is to find the core and key from many requirements. Part of the implementation, and set the goal of the system on November 1st; this approach is also known as the industry&#39;s MVP minimum viable product (minimum viable product). 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/4/43da67ffe01266585740d588f330ab41a29f6645.png"><figcaption> Figure 5. Mind map for system design considerations. </figcaption></figure> 
+### Our Strategy 
 
- Finally, after a comprehensive system inventory, a huge tree diagram like the one above is generated. There are many things to be solved, but resources and time are limited. Therefore, the first task is to find the core and key from many requirements. Part of the implementation, and set the goal of the system on November 1st; this approach is also known as the industry&#39;s MVP minimum viable product (minimum viable product). 
+We split the one-stop service website into two parts, Frontend and Backend (Note 2). 
 
- ### Our Strategy 
+In order to plan out the range of the smallest viable product, we try to imitate the [microservice](https://en.wikipedia.org/zh-tw/microservice) thinking common in the general industry. 
 
- We split the one-stop service website into two parts, Frontend and Backend (Note 2). 
+*** What is microservice thinking? *** 
 
- In order to plan out the range of the smallest viable product, we try to imitate the [microservice](https://en.wikipedia.org/zh-tw/microservice) thinking common in the general industry. 
+*If you try to imagine a one-stop system as a castle made of bricks, we can simply divide the castle into many different shapes. Building blocks, just find out the building blocks of the required shape one by one for assembly. If a specific shape does not exist, make it; and to avoid spending time and money making new blocks, cut the castle with the existing shape as much as possible as a priority. * 
+*At the same time, remember that when stacking wooden blocks in the past, they were usually made into the most common shape (such as round, square, triangle, etc.), so if you have to make new blocks as a last resort, consider as much as possible. Cut into a universal shape. * 
 
- *** What is microservice thinking? *** 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/e/e1ddb1d3f4f5c8f387edc9518b9714e7d47986ca_2_991x496.png"><figcaption> Figure 6. Through the thinking of stacked wood, PDIS initially conceived the prototype of Figure 6. </figcaption></figure> 
 
- ** If you try to imagine a one-stop system as a castle made of bricks, we can simply divide the castle into many different shapes. Building blocks, just find out the building blocks of the required shape one by one for assembly. If a specific shape does not exist, make it; and to avoid spending time and money making new blocks, cut the castle with the existing shape as much as possible as a priority. * 
- * At the same time, remember that when stacking wooden blocks in the past, they were usually made into the most common shape (such as round, square, triangle, etc.), so if you have to make new blocks as a last resort, consider as much as possible. Cut into a universal shape. * 
+One of the important points in the thinking of stacked blocks is to avoid making new blocks as much as possible, so we choose to keep the existing system. 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/e/e1ddb1d3f4f5c8f387edc9518b9714e7d47986ca_2_991x496.png"><figcaption> Figure 6. Through the thinking of stacked wood, PDIS initially conceived the prototype of Figure 6. </figcaption></figure> 
+In the right half of the figure, the main core part of this one-stop service is the new building blocks. Frontend-&quot;One-stop Application User Interface&quot; and Backend-&quot;One-stop Application Server&quot; . 
 
- One of the important points in the thinking of stacked blocks is to avoid making new blocks as much as possible, so we choose to keep the existing system. 
+In the middle is the part where every existing building block is connected with one-stop service-&quot;User Agent&quot;, which can be imagined as making a new and old building block adapter. 
 
- In the right half of the figure, the main core part of this one-stop service is the new building blocks. Frontend-&quot;One-stop Application User Interface&quot; and Backend-&quot;One-stop Application Server&quot; . 
+Under this structure, the existing system can be retained, and a one-stop integrated service network can be developed, allowing the one-stop integrated service network to throw back application data to the original system. 
 
- In the middle is the part where every existing building block is connected with one-stop service-&quot;User Agent&quot;, which can be imagined as making a new and old building block adapter. 
+The RESTful API is used for the connection between the new system and the agent. The API specification is adopted by the National Development Commission based on [OAS3](https://github.com/oai/openapi-specification/blob/master/v ㄐ ersions / 3.0.0.md) (openapi specification 3.0) &quot;[common application programming interface specification](https://theme.ndc.gov.tw/lawout/lawcontent.aspx?id=gl000270)&quot;. 
 
- Under this structure, the existing system can be retained, and a one-stop integrated service network can be developed, allowing the one-stop integrated service network to throw back application data to the original system. 
+On 08/28 and 09/06, under the auspices of Tang Feng, held a total of two technical meetings with the ministry and related manufacturers to discuss the aforementioned prototypes. 
 
- The RESTful API is used for the connection between the new system and the agent. The API specification is adopted by the National Development Commission based on [OAS3](https://github.com/oai/openapi-specification/blob/master/v ㄐ ersions / 3.0.0.md) (openapi specification 3.0) &quot;[common application programming interface specification](https://theme.ndc.gov.tw/lawout/lawcontent.aspx?id=gl000270)&quot;. 
+In the first technical meeting of 08/28, PDIS first proposed the concept as shown in Figure 6 to the ministry and manufacturers. Solicit opinions from various manufacturers and communicate matters that existing manufacturers need to cooperate with. 
 
- On 08/28 and 09/06, under the auspices of Tang Feng, held a total of two technical meetings with the ministry and related manufacturers to discuss the aforementioned prototypes. 
+In the second technical meeting of 09/06, at this time, the technical details of the &quot;user agent&quot; were discussed. There are roughly two directions: the existing vendors implement APIs on existing systems, And other contract manufacturers make APIs through web crawler technology. 
 
- In the first technical meeting of 08/28, PDIS first proposed the concept as shown in Figure 6 to the ministry and manufacturers. Solicit opinions from various manufacturers and communicate matters that existing manufacturers need to cooperate with. 
+### Our Minimal Feasibility Model 
 
- In the second technical meeting of 09/06, at this time, the technical details of the &quot;user agent&quot; were discussed. There are roughly two directions: the existing vendors implement APIs on existing systems, And other contract manufacturers make APIs through web crawler technology. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/0/0564f8a4c6ea5ff354ec1049f1146a9f493cbff3_2_991x558.jpeg"><figcaption> Figure 7 shows the system architecture of a one-stop service network (compared to Figure 6, simplifying the existing system and using agents) </figcaption></figure> 
 
- ### Our Minimal Feasibility Model 
+After user interviews by RAY students, two technical meetings, and the morning technical meeting of the second technical meeting, a total of more than one month, we produced the minimum feasible model shown in Figure 7. Implement it. 
 
- <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/0/0564f8a4c6ea5ff354ec1049f1146a9f493cbff3_2_991x558.jpeg"><figcaption> Figure 7 shows the system architecture of a one-stop service network (compared to Figure 6, simplifying the existing system and using agents) </figcaption></figure> 
+The implementation of the National Park Admission by the Police Department, Forest Service, and Architectural Administration for existing national parks, the entry of the Police Department into the mountains, the Forest Service Bureau&#39;s protected areas, and the mountain house system are implemented in accordance with the National Development Commission based on [OAS3 ](https://github.com/oai/openapi-specification/blob/master/versions/3.0.0.md) (openapi specification 3.0) &quot;[common application programming interface specification](https: // theme .ndc.gov.tw / lawout / lawcontent.aspx? id = gl000270) &quot;, so that the original system manufacturers can, as far as possible, target [crud](https://en.wikipedia.org/wiki) / create, read, update, delete) and public information review (such as load limit, balance) implement an application programming interface (api) for one-stop website use. 
 
- After user interviews by RAY students, two technical meetings, and the morning technical meeting of the second technical meeting, a total of more than one month, we produced the minimum feasible model shown in Figure 7. Implement it. 
+### Grasp the spirit of government digital service guidelines (Note 1) 
 
- The implementation of the National Park Admission by the Police Department, Forest Service, and Architectural Administration for existing national parks, the entry of the Police Department into the mountains, the Forest Service Bureau&#39;s protected areas, and the mountain house system are implemented in accordance with the National Development Commission based on [OAS3 ](https://github.com/oai/openapi-specification/blob/master/versions/3.0.0.md) (openapi specification 3.0) &quot;[common application programming interface specification](https: // theme .ndc.gov.tw / lawout / lawcontent.aspx? id = gl000270) &quot;, so that the original system manufacturers can, as far as possible, target [crud](https://en.wikipedia.org/wiki) / create, read, update, delete) and public information review (such as load limit, balance) implement an application programming interface (api) for one-stop website use. 
- 
- ### Grasp the spirit of government digital service guidelines (Note 1) 
+To assist various agencies within the government to develop cross-domain service integration and implement user-centered service design concepts, to achieve the vision of building a smart government, Under the leadership of the National Development Commission in January 107, the “Guidelines for the Design of Government Digital Services (Draft)” were drafted, and the Government Digital Services Guidelines (Beta) were published in October of the same year, which were provided to agencies for the development of digital services. reference. (Note 1) 
 
- To assist various agencies within the government to develop cross-domain service integration and implement user-centered service design concepts, to achieve the vision of building a smart government, Under the leadership of the National Development Commission in January 107, the “Guidelines for the Design of Government Digital Services (Draft)” were drafted, and the Government Digital Services Guidelines (Beta) were published in October of the same year, which were provided to agencies for the development of digital services. reference. (Note 1) 
+This one-stop climbing application service is no exception. We take into account the overall development energy as much as possible to (Note 1). From time to time throughout the execution of the project, I checked back from time to time to see if it deviated from its spirit, as one of the basis for adjustment during the execution of the project. 
 
- This one-stop climbing application service is no exception. We take into account the overall development energy as much as possible to (Note 1). From time to time throughout the execution of the project, I checked back from time to time to see if it deviated from its spirit, as one of the basis for adjustment during the execution of the project. 
+National Development Commission-[Government Digital Services Guidelines](https://www.ndc.gov.tw/content_list.aspx?n=e7f6c261a5f5d9f5) 
 
- National Development Commission-[Government Digital Services Guidelines](https://www.ndc.gov.tw/content_list.aspx?n=e7f6c261a5f5d9f5) 
+### Iterative evolution of government departments is also possible! 
 
- ### Iterative evolution of government departments is also possible! 
+The aforementioned mentioned guidelines for grasping government digital services, the fourth of which is: 
 
- The aforementioned mentioned guidelines for grasping government digital services, the fourth of which is: 
+** ** Continuously Improved Operational Procedures ** 
+Through Rapid Prototyping, Iterative, and Incremental Software development methods, continuous improvement services. 
+In order to respond to technological innovation, policy challenges, and changes in user needs, it is appropriate to consider the changes in user needs, the overall structure of the service, and the maturity of technical resources at all stages of the service life cycle. Iterative development procedures are adopted and continuously included. Give feedback and respond quickly to advanced services. 
 
- ** ** Continuously Improved Operational Procedures ** 
- Through Rapid Prototyping, Iterative, and Incremental Software development methods, continuous improvement services. 
- In order to respond to technological innovation, policy challenges, and changes in user needs, it is appropriate to consider the changes in user needs, the overall structure of the service, and the maturity of technical resources at all stages of the service life cycle. Iterative development procedures are adopted and continuously included. Give feedback and respond quickly to advanced services. 
+In this one-stop integrated development process, we tried to follow this spirit, and imitate the industry&#39;s software engineering method to request contracted developers to make iterative corrections. 
 
- In this one-stop integrated development process, we tried to follow this spirit, and imitate the industry&#39;s software engineering method to request contracted developers to make iterative corrections. 
+10/01, less than a month after the start of the 09/09 development work, we conducted the first internal user test of the system still under development, and invited those who had participated in the collaborative meeting Civil partners assist in testing, point out problems, and collect and summarize these problems for contract manufacturers to modify. 
 
- 10/01, less than a month after the start of the 09/09 development work, we conducted the first internal user test of the system still under development, and invited those who had participated in the collaborative meeting Civil partners assist in testing, point out problems, and collect and summarize these problems for contract manufacturers to modify. 
+After a lapse of half a month, 10/16 re-invited the civil partners who participated in the previous test to confirm whether there have been improvements to the questions raised previously, and at the same time to discuss those features that may be added in the future. 
 
- After a lapse of half a month, 10/16 re-invited the civil partners who participated in the previous test to confirm whether there have been improvements to the questions raised previously, and at the same time to discuss those features that may be added in the future. 
+Through the coordination of the Ministry of Education, each subsystem (microservice) on the integrated system has a &quot;test environment&quot; and a &quot;formal environment&quot;. After the 11/01 system was launched, there were two sets of similar system environments. On the basis, through the cycle shown in Figure 8, the system can be gradually made better step by step. 
 
- Through the coordination of the Ministry of Education, each subsystem (microservice) on the integrated system has a &quot;test environment&quot; and a &quot;formal environment&quot;. After the 11/01 system was launched, there were two sets of similar system environments. On the basis, through the cycle shown in Figure 8, the system can be gradually made better step by step. 
+<figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/3/3b7df857a6584c7f5f0b2dfa8b7a1e67fb738d7e_2_991x558.jpeg"><figcaption> Figure 8. Iterative loop </figcaption></figure> 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/3/3b7df857a6584c7f5f0b2dfa8b7a1e67fb738d7e_2_991x558.jpeg"><figcaption> Figure 8. Iterative loop </figcaption></figure> 
+## 大事记 
 
- ## 大事记 
+In the end, in line with the requirements of the policy schedule, we launched the first version of the integrated system in the development schedule only about two months. 
 
- In the end, in line with the requirements of the policy schedule, we launched the first version of the integrated system in the development schedule only about two months. 
+The timeline of the picture below helped you organize the beginning and end of this case 
 
- The timeline of the picture below helped you organize the beginning and end of this case 
+![Image](https://talk.pdis.nat.gov.tw/uploads/default/optimized/2x/3/343814fb9bc23ab5582d97d7e9a40971bdbdf679_2_1035x582.jpeg) 
 
-! [Image](https://talk.pdis.nat.gov.tw/uploads/default/optimized/2x/ 3 / 343814fb9bc23ab5582d97d7e9a40971bdbdf679_2_1035x582.jpeg) 
 
+- 2019/08/05 [Thirty-third Monthly Meeting of Open Government Liaisons-Ministry of Interior Collaboration Meeting](https://sayit.pdis.nat.gov.tw/2019-08-05-開放政府po第三十次月會#s313912)
+- 2019/08/28 [First Technical Coordination Meeting (Coordination Meeting of Mountaineering System Reform Case)](https://sayit.pdis.nat.gov.tw/2019-08-28-登山線上系統改造案協調會議)
+- 2019/09/06 [Fifty-fourth Open Government Collaboration Conference](https://sayit.pdis.nat.gov.tw/2019-09-06-開放政府第54次議題協作會議)
+- 2019/09/06 [Second Technical Coordination Conference (Technical Coordination Conference on One-stop Service Platform for Mountaineering) ](https://sayit.pdis.nat.gov.tw/2019-09-06-登山一站式服務平臺技術協調會議)
 
--2019/08/05 [Thirty-third Monthly Meeting of Open Government Liaisons-Ministry of Interior Collaboration Meeting] .tw / 2019-08-05-The 30th Monthly Meeting of the Open Government Po # s313912) 
--2019/08/28 [First Technical Coordination Meeting (Coordination Meeting of Mountaineering System Reform Case)](https: / /sayit.pdis.nat.gov.tw/2019-08-28-coordination meeting of mountaineering online system reconstruction cases) 
--2019/09/06 [Fifty-fourth Open Government Collaboration Conference](https: // sayit .pdis.nat.gov.tw / 2019-09-06-the 54th meeting of the open government on issues collaboration) 
--2019/09/06 [Second Technical Coordination Conference (Technical Coordination Conference on One-stop Service Platform for Mountaineering) ](https://sayit.pdis.nat.gov.tw/2019-09-06- mountaineering one-stop service platform technical coordination meeting) 
+## Future Outlook 
 
- ## Future Outlook 
+![image](https://talk.pdis.nat.gov.tw/uploads/default/optimized/2x/1/10d6b18e5a969071f9a8b80d12100532ab445733_2_1035x582.jpeg) 
 
- !! [image](https : //talk.pdis.nat.gov.tw/uploads/default/optimized/2x/1/10d6b18e5a969071f9a8b80d12100532ab445733_2 _1035x582.jpeg) 
+&quot;This is not the end ... we are about to start&quot; 
 
- &quot;This is not the end ... we are about to start&quot; 
+Although the system was released on November 1, this is not the end, it is just the beginning. 
 
- Although the system was released on November 1, this is not the end, it is just the beginning. 
+As mentioned earlier, this case uses iterative development, so after the system goes online, it will continue to consolidate opinions and include continuous revision considerations. 
 
- As mentioned earlier, this case uses iterative development, so after the system goes online, it will continue to consolidate opinions and include continuous revision considerations. 
+For those matters that are limited by the time-course pressure and excluded from the minimum feasible model, PDIS also sorted it out for reference at the follow-up refinement meeting on December 13. 
 
- For those matters that are limited by the time-course pressure and excluded from the minimum feasible model, PDIS also sorted it out for reference at the follow-up refinement meeting on December 13. 
+- 2019/12/13 [Taiwan mountaineering application one-stop service network follow-up improvement conference](https://sayit.pdis.nat.gov.tw/2019-12-13-one-stop taiwan mountaineering application service network follow-up conference on advanced matters) 
+  - [Presentation Content](https://issuu.com/pdis.tw/docs/____________________fc548fbffee8d7) 
 
--2019/12/13 [Taiwan mountaineering application one-stop service network follow-up improvement conference](https://sayit.pdis.nat.gov.tw/2019-12-13-one-stop taiwan mountaineering application service network follow-up conference on advanced matters) 
--[Presentation Content](https://issuu.com/pdis.tw/docs/____________________fc548fbffee8d7) 
 
 
+Note 1: &quot;Government Digital Service Standards&quot; December 108 changed its name to &quot;Government Digital Services Guidelines&quot;. 
 
-| Note 1: &quot;Government Digital Service Standards&quot; December 108 changed its name to &quot;Government Digital Services Guidelines&quot;. 
-
- Note 2: If the general industry defines web services similarly, the front-end Frontend is the web interface that the user can operate; the back-end Backend is the part that the user cannot see on the web server. Taking this case as an example, the design of the RAY students is the front-end design draft; the back part is the part that helps to throw the application form back to the original system. 
+Note 2: If the general industry defines web services similarly, the front-end Frontend is the web interface that the user can operate; the back-end Backend is the part that the user cannot see on the web server. Taking this case as an example, the design of the RAY students is the front-end design draft; the back part is the part that helps to throw the application form back to the original system. 
