--- a/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
+++ b/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
@@ -3,7 +3,7 @@
   title: "Design Notes: eMask 2.0"
   excerpt: "Under the condition that the existing health insurance special pharmacy distribution system remains unchanged, new online pre-order channels have been added."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/3dd0ee36ff7ff6447ab517fb5a5d775c2c258f10.jpeg"
-  author: "Audrye Tang, Zach Huang"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
     - "Open Government"
